menu.css
.menu-container {
    position: absolute;
    width: 100%;
    height: 100px;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
}

.nav-logo {
    display: flex;
}

.nav-logo img {
    width: 50px;
    height: 50px;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 60%;

}

.nav-links p {
    cursor: pointer;
}

.nav-home-sub,
.nav-software-sub
{
    width: 0;
    position: absolute;
    height: 0px;
    transition: all .3s ease-in-out;
    overflow: hidden;
}

.nav-home:hover .nav-home-sub,
.nav-software:hover .nav-software-sub
{
    width: 100%;
    left: 50%;
    transform: translateX(-50%);
    background-color: whitesmoke;
    height: 150px;
    border: 1px solid black;
    
}

